--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,9 +18,4 @@ steps:
 - script: |
     npm install
     npm run build
-    npm test
-- task: PublishTestResults@2
-  inputs:
-    testResultsFormat: 'JUnit'
-    testResultsFiles: '**/TEST-*.xml'
-  displayName: 'npm install and build'
+    node app.js
