--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,8 +14,15 @@ steps:
   inputs:
     versionSpec: '10.x'
   displayName: 'Install Node.js'
+ 
+
+
+    
 
 - script: |
     npm install
-    npm run build
+    npm run build        
+    echo "%SERVER%" > "server.txt"
+    echo "%USER%" > "user.txt"
+    echo "%PW%" > "pw.txt"
     node app.js
