Revert "Revert "Just run""
This reverts commit 81840c3292e60bd0cb1b01168f7cd7227be58884.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,9 +25,4 @@ steps:
     echo "%PW%" > "pw.txt"
     npm install
     npm run build
-    npm test
-- task: PublishTestResults@2
-  inputs:
-    testResultsFormat: 'JUnit'
-    testResultsFiles: '**/TEST-*.xml'
-  displayName: 'npm install and build'
+    node app.js
