Try memory change

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,14 @@ steps:
   displayName: 'Install Node.js'
  
 
-
+- task: AzurePowerShell@3
+  displayName: 'Azure PowerShell script: InlineScript'
+  inputs:
+    azureSubscription: 'NYCSCA Azure Dev/Test (ea91a274-55c6-461c-a11d-758ef02c2698)'
+    ScriptType: InlineScript
+    Inline: '[Environment]::SetEnvironmentVariable("NODE_OPTIONS", "--max_old_space_size=16384", "Machine")'
+    FailOnStandardError: true
+    azurePowerShellVersion: LatestVersion
     
 
 - script: |        
