--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,17 +16,10 @@ steps:
   displayName: 'Install Node.js'
  
 
-- task: AzurePowerShell@3
-  displayName: 'Azure PowerShell script: InlineScript'
-  inputs:
-    azureSubscription: '0be5888e-2158-4401-a1cd-f5563bda137c'
-    ScriptType: InlineScript
-    Inline: '[Environment]::SetEnvironmentVariable("NODE_OPTIONS", "--max_old_space_size=16384", "Machine")'
-    FailOnStandardError: true
-    azurePowerShellVersion: LatestVersion
+- 
     
 
 - script: |        
-    npm install
+    npm install -g increase-memory-limit
     npm run build
     node app.js %SERVER% %USER% %PW%
