--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,7 @@ steps:
     
 
 - script: |        
+    npm install 
     npm install -g increase-memory-limit
     npm run build
     node app.js %SERVER% %USER% %PW%
