--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,5 +20,6 @@ steps:
 - script: |          
     npm install 
     npm install -g increase-memory-limit
+    npm run fix-memory-limit
     npm run build
     node app.js %SERVER% %USER% %PW%
