--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,9 +14,12 @@ steps:
   inputs:
     versionSpec: '10.x'
   displayName: 'Install Node.js'
- 
-    
 
+- task: PowerShell@2
+  displayName: Build
+  env:
+    NODE_OPTIONS: --max_old_space_size=16384
+ 
 - script: |          
     npm install 
     npm install -g increase-memory-limit
