--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,4 +20,4 @@ steps:
     npm install -g increase-memory-limit
     node --max-old-space-size=1024 app.js
     npm run build
-    node app.js %SERVER% %USER% %PW%
+    node app.js $(SERVER) $(USER) $(PW)
