--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,16 @@ schedules:
   branches: 
     include:
     - azure-pipelines
+- cron: "55 20 * * *"
+  displayName: Daily 1600
+  branches: 
+    include:
+    - azure-pipelines
+- cron: "55 0 * * *"
+  displayName: Daily 2200
+  branches: 
+    include:
+    - azure-pipelines
 
 pool:
   vmImage: ubuntu-latest 
