Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,11 @@ schedules:
   branches: 
     include:
     - azure-pipelines
+- cron: "55 2 * * *"
+  displayName: Daily 2200
+  branches: 
+    include:
+    - azure-pipelines
 
 pool:
   vmImage: ubuntu-latest 
