--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,44 +1,38 @@
-# Node.js
-# Build a general Node.js project with npm.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
+# ASP.NET Core (.NET Framework)
+# Build and test ASP.NET Core projects targeting the full .NET Framework.
+# Add steps that publish symbols, save build artifacts, and more:
+# https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 
 trigger:
-- azure-pipelines
-
-schedules:
-- cron: "55 14 * * *"
-  displayName: Daily 1000
-  branches: 
-    include:
-    - azure-pipelines
-  always: true
-
-- cron: "55 20 * * *"
-  displayName: Daily 1600
-  branches: 
-    include:
-    - azure-pipelines
-  always: true
-
-- cron: "55 2 * * *"
-  displayName: Daily 2200
-  branches: 
-    include:
-    - azure-pipelines
-  always: true
+- main
 
 pool:
-  vmImage: ubuntu-latest 
+  vmImage: 'windows-latest'
+
+variables:
+  solution: '**/*.sln'
+  buildPlatform: 'Any CPU'
+  buildConfiguration: 'Release'
 
 steps:
-- task: NodeTool@0
+- task: NuGetToolInstaller@1
+
+- task: NuGetCommand@2
   inputs:
-    versionSpec: '10.x'
-  displayName: 'Install Node.js'
- 
-- script: |          
-    npm install 
-    npm install -g increase-memory-limit
-    npm run build
-    node app.js $(SERVER) $(USER) $(PW)
+    restoreSolution: '$(solution)'
+
+- task: VSBuild@1
+  inputs:
+    solution: '$(solution)'
+    msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:DesktopBuildPackageLocation="$(build.artifactStagingDirectory)\WebApp.zip" /p:DeployIisAppPath="Default Web Site"'
+    platform: '$(buildPlatform)'
+    configuration: '$(buildConfiguration)'
+
+- task: VSTest@2
+  inputs:
+    platform: '$(buildPlatform)'
+    configuration: '$(buildConfiguration)'
+
+- task: CmdLine@2
+  inputs:
+    script: 'D:\a\1\s\556Gauge-ProductionDB\bin\Release\netcoreapp3.1\556Gauge-ProductionDB.exe $(PSERVER) $(PUSER) $(PPW) $(BSERVER) $(BUSER) $(BPW)'
